--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,9 @@
   "functions": {
     "api/**/*.rs": {
       "runtime": "vercel-rust@4.0.0-beta.3"
+    },
+    "api/*.py": {
+      "excludeFiles": "{target}/**"
     }
   }
 }
