--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
       "runtime": "vercel-rust@4.0.0-beta.3"
     },
     "api/*.py": {
-      "excludeFiles": "{target,pages}/**"
+      "excludeFiles": "{target,node_modules}/**"
     }
   }
 }
